--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,12 @@
     "es2021": true,
     "node": true
   },
-  "extends": "eslint:recommended",
+  "extends": "eslint:recommended", 
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "no-unused-vars": "warn"
+  }
 }
